# deposit_gui

./: .gitattributes  .gitignore  README.md  THIRDPARTY.TXT  TODO.md  imports.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
deposit_gui/: __init__.py  dgui_main.py
deposit_gui/controller/: cmdiarea.py  cmodel.py
deposit_gui/dgui/: abstract_subview.py  dcdialogs.py  dclickable_logo.py  dmenu_bar.py  dprogress.py  dregistry.py  dstatus_bar.py  dvactions.py  dvdialogs.py
deposit_gui/dgui/dconnect_tabs/: abstract_tab_file.py  dconnect_tab_db_rel.py  dconnect_tab_json.py  dconnect_tab_memory.py  dconnect_tab_pickle.py
deposit_gui/dialogs/: dialog_connect.py
deposit_gui/model/: model.py
deposit_gui/view/: view.py  vquerytoolbar.py
deposit_gui/view/vmdiarea_frames/: class_graph_frame.py  external_frame.py
deposit_gui/view/vmdiarea_frames/query_frame_elements/: abstract_drag_model.py  query_item.py  query_tab_graph.py  query_tab_table.py  relation_frame.py
deposit_gui/view/vusertools_elements/: manager.py
deposit_gui/view/vusertools_elements/dialog/: dialog_multi_group.py  dialog_search_form.py
deposit_gui/view/vusertools_elements/editor/: editor_form.py  editor_group.py  editor_unique.py
installer_linux/: build.sh  dep_gui.spec  hiddenimports.py  make_appimage.py
installer_linux/custom_hooks/: hook-pygraphviz.py
installer_mac/: build.sh  collect_frameworks.sh  create_app.py  dep_gui.spec  deposit_gui.pkgproj  deposit_gui.pkgproj.tpl  hiddenimports.py  make_pkgproj.py  readme_installer.md
installer_win/: build.bat  dep_gui.spec  dep_gui_installer.tpl  hiddenimports.py  make_ifp.py  make_nsi.py  readme_installer.md
installer_win/prepare_graphviz/: build.bat  prepare_graphviz.py
scripts/: install_pygraphviz.sh
src/deposit_gui/: __init__.py  _meta.py  dgui_main.py
src/deposit_gui/controller/: cactions.py  cdialogs.py  cmdiarea.py  cmodel.py  cnavigator.py  controller.py  cquerytoolbar.py  cusertools.py  cview.py
src/deposit_gui/dgui/: abstract_subcontroller.py  abstract_subview.py  dcactions.py  dcdialogs.py  dclickable_logo.py  dcmodel.py  dconnect_frame.py  ddialog.py  dgraph_view.py  dgraphics_view.py  dlogging.py  dmain_window.py  dmenu_bar.py  dmodel.py  dnotification.py  dprogress.py  dregistry.py  dsave_as_postgres_frame.py  dstatus_bar.py  dtool_bar.py  dvactions.py  dvdialogs.py  dview.py
src/deposit_gui/dialogs/: dialog_about.py  dialog_add_relation.py  dialog_connect.py  dialog_import_external.py  dialog_import_source.py  dialog_import_store.py
src/deposit_gui/model/: model.py
src/deposit_gui/res/: deposit_icon.icns
src/deposit_gui/utils/: download_libs.py  fnc_svg.py  fnc_thumbnails.py  install_linux_libs.sh  install_mac_libs.sh
src/deposit_gui/view/: view.py  vmdiarea.py  vnavigator.py  vquerytoolbar.py  vusertools.py
tests/: test_store.py
(+112 files in other folders)
